# RT-Makeup-Mediapipe

./: .gitignore  README.md  pyproject.toml
src/: main.py  utils.py
