[tool.poetry]
name = "realtime makeup"
version = "0.1.0"
description = ""
authors = ["djm10 <djm9826@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.74"
mediapipe = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
